Added communication between directives

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 <body ng-app="app">
 	<h1>Tabs, tabs, tabs!</h1>
-	<tab>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti consectetur beatae nulla placeat dolorem delectus explicabo, similique dolorum voluptatibus distinctio harum quos maxime laudantium voluptate dolor necessitatibus molestias enim labore.
-	</tab>
+	<tabset>
+		<tab>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti consectetur beatae nulla placeat dolorem delectus explicabo, similique dolorum voluptatibus distinctio harum quos maxime laudantium voluptate dolor necessitatibus molestias enim labore.
+		</tab>
+		<tab>
+			Another tab!
+		</tab>	
+	</tabset>
 </body>
 </html>
