--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body ng-app="app">
 	<h1>Tabs, tabs, tabs!</h1>
 	<tabset>
-		<tab>
+		<tab heading="Tab1">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti consectetur beatae nulla placeat dolorem delectus explicabo, similique dolorum voluptatibus distinctio harum quos maxime laudantium voluptate dolor necessitatibus molestias enim labore.
 		</tab>
-		<tab>
+		<tab heading="Tab2">
 			Another tab!
 		</tab>	
 	</tabset>
+	<script src="app.js"></script>
 </body>
 </html>
